--- a/seantis/dir/facility/locales/de/LC_MESSAGES/seantis.dir.facility.po
+++ b/seantis/dir/facility/locales/de/LC_MESSAGES/seantis.dir.facility.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2012-05-07 12:41+0000\n"
+"POT-Creation-Date: 2012-06-19 12:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,10 @@ msgstr ""
 #: ./templates/itemdetail.pt:27
 msgid "Category"
 msgstr "Kategorie"
+
+#: ./templates/item.pt:34
+msgid "Click on a resource to get to the reservation view."
+msgstr "Klicken Sie auf eine Ressource um zur Reservation zu gelangen."
 
 #: ./templates/itemdetail.pt:40
 msgid "Contact"
