--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,13 +1,14 @@
 Changelog
 =========
 
-1.5 (unreleased)
+1.5
 ---
 
-Upgrade to seantis.dir.base 1.5
+- Upgrade to seantis.dir.base 1.5
 
 1.4.1
 -----
+
 - Fixes dexterity type icons
 
 1.4
