--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,10 +2,11 @@
 Changelog
 =========
 
-1.7.3 (unreleased)
-------------------
+1.8 (unreleased)
+----------------
 
-Nothing yet.
+- Move styles from plonetheme.onegov to this package.
+  [msom]
 
 1.7.2 (2014-09-23)
 ------------------
