--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -8,6 +8,9 @@ Changelog
 - Move styles from plonetheme.onegov to this package.
   [msom]
 
+- Visual redesign.
+  [msom]
+
 1.7.2 (2014-09-23)
 ------------------
 
