Add missing test dependencies

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.7.3 (unreleased)
+------------------
+
+- Add missing test dependencies.
+  [msom]
+
 1.7.2 (2014-09-23)
 ------------------
 
