--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.7.4 (2016-07-27)
+------------------
+
+- Re-release.
+  [msom]
+
 1.7.3 (2016-07-27)
 ------------------
 
